# allay-app

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
src/: Global.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/models/: mod.rs  query.rs  server.rs  server_state.rs  version.rs
src-tauri/src/services/: download_service.rs  fabric_strategy.rs  forge_strategy.rs  heartbeat_manager.rs  mod.rs  mod_loader_strategy.rs  neoforge_strategy.rs  paper_strategy.rs  query_service.rs  quilt_strategy.rs  rcon_global.rs  rcon_manager.rs  rcon_service.rs  server_management_service.rs  server_monitor.rs  server_order_service.rs  simple_rcon_monitor.rs  unified_server_service.rs  vanilla_strategy.rs  version_manager.rs  version_service.rs
src-tauri/src/util/: file_manager_trait.rs  jar_cache_manager.rs  mod.rs  rcon_logger.rs  server_file_manager.rs  server_properties_manager.rs  version_cache_manager.rs
src/components/common/: ActionBar.tsx  AllayLayout.tsx  ChangeServerImg.tsx  ContextMenu.tsx  Dropdown.tsx  MemorySlider.tsx  MinecraftMOTD.tsx  Modal.tsx  RadioGroup.tsx  ScrollContainer.tsx  ToolTip.tsx
src/components/modals/: CreateServerModal.tsx  (+3 more)
src/contexts/: LocaleContext.tsx  RconContext.tsx  ServerStateContext.tsx  SystemContext.tsx  ThemeContext.tsx
src/hooks/: useRcon.ts  useWindowControls.ts
src/locales/: en.json  es-LA.json
src/pages/: Home.tsx  ServerDetails.tsx  Settings.tsx  StyleGuide.tsx  Terminal.tsx
(+7 files in other folders)
